# telegram-auto-shit

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cmds.rs  console.rs  main.rs  state.rs
