[package]
name = "auto-shit"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive", "wrap_help"] }
dashmap = "6.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
grammers-client = { git = "https://github.com/Lonami/grammers", rev = "daf8189e64c9274de61ea020b42fd106bd52bcc9" }
owo-colors = { version = "4.1.0", features = ["alloc"] }
rand = "0.9.0"
rustyline = { version = "15.0.0", features = ["case_insensitive_history_search", "derive"] }
serde = { version = "1.0.217", features = ["derive"] }
shlex = "1.3.0"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5.0"
